--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 .App {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   min-height: 100vh;
   padding: 1rem 0.5rem;
@@ -43,4 +43,18 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.headerContainer {
+  display: flex;
+  align-items: center;
+}
+
+.headerLinks {
+  display: flex;
+  padding-left: 40vh;
+}
+
+.links {
+  padding-right: 25px;
 }
