Added users Posts to Profile component, and user search functionality to follow/unfollow other users

--- a/src/App.css
+++ b/src/App.css
@@ -53,8 +53,11 @@
 .headerLinks {
   display: flex;
   padding-left: 40vh;
+  gap: 5vh;
 }
 
-.links {
-  padding-right: 25px;
+.posts {
+  width: 85vh;
+  display: inline-flex;
+  flex-wrap: wrap;
 }
