--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,6 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -15,54 +10,51 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #114e09;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #4e774c;
 }
 
 body {
-  margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background-color: rgba(166, 224, 181, 0.815);
+  background-color: rgba(91, 173, 112, 0.815);
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 3em;
   line-height: 1.1;
+  color: rgba(41, 61, 46, 0.815);
 }
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
+  border: 1px solid #255735;
+  background-color: rgba(68, 107, 78, 0.815);
+  color: #d9f0d7;
+  padding: 0.4em 1.4em;
+  font-size: 1.1em;
+  font-weight: 400;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  font-weight: 600;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+button:disabled {
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #8b8b8b;
+  cursor: auto;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+input {
+  padding: 0.2em;
+  border-radius: 5px;
+  border-color: rgb(59, 129, 68);
+  border-width: 0.02em;
+  width: 40vh;
 }
