--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,18 +1,20 @@
 .header {
   display: flex;
-  align-items: center;
-  font-size: large;
-}
-
-.linksContainer {
-  padding-left: 30vh;
+  align-items: baseline;
+  justify-content: space-between;
+  padding: 0vh 4vw 2vh 4vw;
+  margin-bottom: 3vh;
+  max-width: 95vw;
+  border-bottom: 1px double bisque;
 }
 
 .name {
   font-weight: 800;
-  font-size: larger;
+  font-size: x-large;
+  text-shadow: 3px 3px 3px #d9edc7;
 }
 
 .links {
-  padding: 3vh;
+  padding-left: 3vw;
+  text-shadow: 2px 2px 2px #d9edc7;
 }
