--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,13 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 1rem;
+  text-align: center;
+  background-color: rgba(200, 233, 209, 0.815);
+}
 
 a {
   font-weight: 500;
