--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,13 +5,15 @@
   padding: 0vh 4vw 2vh 4vw;
   margin-bottom: 3vh;
   max-width: 95vw;
-  border-bottom: 1px double bisque;
+  border-bottom: 1px double rgb(255, 238, 217);
 }
 
 .name {
   font-weight: 800;
   font-size: x-large;
   text-shadow: 3px 3px 3px #d9edc7;
+  padding-right: 50px;
+  min-width: fit-content;
 }
 
 .links {
