Dynamically rendering followers/unfollowers buttons (in Post/Follows) instead of repeating code

--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -47,11 +47,7 @@
   display: flex;
 }
 
-.followers {
+.button {
   margin-right: 5px;
-  font-size: medium;
-}
-
-.following {
-  font-size: medium;
+  font-size: smaller;
 }
