moved ListsProvider to wrap around App, Logout functionality to send request to backend for db entry deletion whilst setting context in frontend to an empty object, added PersistLogin to maintain authentication on refresh, started localising button styling, and CreatePostOverlay is finally now an overlay/pop-up

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -20,3 +20,12 @@
   padding-left: 3vw;
   text-shadow: 2px 2px 2px #d9edc7;
 }
+
+.logout {
+  font-weight: 500;
+  color: #114e09;
+  text-decoration: inherit;
+}
+.logout:hover {
+  color: #6dad69;
+}
