--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -8,6 +8,16 @@
   margin: 1.5em 1em;
   padding: 0.6em 1.8em;
   font-weight: 600;
+  border-radius: 8px;
+  border: 1px solid #255735;
+  background-color: rgba(68, 107, 78, 0.815);
+  color: #d9f0d7;
+  font-size: 1.1em;
+  font-family: inherit;
+  cursor: pointer;
+}
+button:hover {
+  background-color: rgba(91, 134, 102, 0.815);
 }
 
 .list {
