--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,17 +2,13 @@
   display: flex;
   align-items: baseline;
   justify-content: space-between;
-  padding: 0vh 4vw 2vh 4vw;
-  margin-bottom: 3vh;
-  width: 75vw;
-  border-bottom: 1px double rgb(255, 238, 217);
+  padding-bottom: 3vh;
 }
 
 .name {
   font-weight: 800;
   font-size: x-large;
   text-shadow: 3px 3px 3px #d9edc7;
-  padding-right: 50px;
   min-width: fit-content;
 }
 
