--- a/src/components/Posts/Posts.module.css
+++ b/src/components/Posts/Posts.module.css
@@ -1,14 +1,14 @@
-.posts {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-}
-
 .post {
   display: flex;
   flex-direction: column;
+  width: fit-content;
+}
+
+.postCard {
+  border: 1px double rgba(120, 145, 114, 0.507);
+  border-radius: 5px;
+  margin: 5px;
+  padding: 15px;
 }
 
 .editPostButton {
