--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -1,8 +1,8 @@
 .profile {
-  max-width: 90svw;
   display: flex;
   flex-direction: column;
   padding-top: 2vh;
+  width: 100%;
   /* justify-content: space-between; */
 }
 
@@ -15,39 +15,21 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-left: 15vh;
-  padding-right: 15vh;
+  padding: 0vh 8vw;
   background-color: rgba(228, 245, 220, 0.486);
   border-radius: 8px;
-  margin-top: 3vh;
-  margin-bottom: 5vh;
+  margin-bottom: 2.5vh;
 }
 
 .posts {
-  flex-grow: 2;
-  display: flex;
-  flex-direction: column;
+  /* flex-grow: 2; */
+  /* display: flex; */
+  /* flex-direction: row;
+  flex-wrap: wrap; */
+  /* align-items: center;
+  justify-content: center; */
   background-color: rgba(224, 245, 212, 0.644);
   border-radius: 8px;
-  margin-right: 5vh;
-  padding: 2vh;
-}
-
-.users {
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(165, 216, 186);
-  min-height: max-content;
-  padding: 2vh;
-  border-radius: 8px;
-  min-width: fit-content;
-}
-
-.follows {
-  display: flex;
-}
-
-.button {
-  margin-right: 5px;
-  font-size: smaller;
+  padding: 2vh 0vw;
+  display: inline-block;
 }
