--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -14,7 +14,7 @@
   z-index: 1;
   padding: 4vh 20vw 0vh;
   width: 90%;
-  background-color: rgb(177, 219, 188);
+  background-color: #b1dbbc;
 }
 
 .outlet {
