amended some queries

--- a/src/components/Posts/Posts.module.css
+++ b/src/components/Posts/Posts.module.css
@@ -86,6 +86,10 @@
   padding: 0px 10px;
 }
 
+.commentInput {
+  width: 20vw;
+}
+
 .deleteCommentButton {
   border: none;
   background-color: transparent;
