--- a/src/pages/Feed/Feed.module.css
+++ b/src/pages/Feed/Feed.module.css
@@ -7,7 +7,7 @@
 }
 
 .sidebar {
-  margin-right: 70px;
+  margin-right: 4vw;
   position: fixed;
   right: 0;
   max-height: 75%;
@@ -16,7 +16,17 @@
   background-color: rgba(165, 216, 186, 0.829);
   padding: 2.5vh;
   border-radius: 3px;
-  min-width: fit-content;
+  width: fit-content;
+}
+
+@media screen and (max-width: 800px) {
+  .sidebar {
+    display: none;
+  }
+  .posts {
+    justify-content: center;
+    padding: 0px;
+  }
 }
 
 .follows {
