--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -16,6 +16,12 @@
   min-width: fit-content;
 }
 
+@media screen and (max-width: 1100px) {
+  .userSearch {
+    display: none;
+  }
+}
+
 .dashboard {
   display: flex;
   flex-direction: column;
