--- a/src/pages/Lists/Lists.module.css
+++ b/src/pages/Lists/Lists.module.css
@@ -13,6 +13,7 @@
   background-color: rgb(177, 219, 188);
   border-radius: 5px;
   font-size: large;
+  text-shadow: 1px 1px 1px #d9edc7;
 }
 
 .patternCards {
