--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,6 +1,11 @@
 .home {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
+}
+
+.heading {
+  padding-right: 450px;
 }
 
 .userSearch {
@@ -19,6 +24,9 @@
 @media screen and (max-width: 1100px) {
   .userSearch {
     display: none;
+  }
+  .heading {
+    padding-right: 0px;
   }
 }
 
