--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -5,14 +5,19 @@
   width: 100%;
 }
 
-.topContainer {
-  width: 80%;
+.main {
+  padding-right: 90px;
+}
+
+.banner {
+  width: 50%;
+  min-width: fit-content;
   display: flex;
-  align-self: center;
+  justify-self: center;
   align-items: center;
   justify-content: space-between;
   padding: 0vh 7vw;
-  background-color: rgba(228, 245, 220, 0.486);
+  border: 1px solid rgba(87, 129, 93, 0.192);
   border-radius: 8px;
   margin-bottom: 2.5vh;
 }
@@ -23,4 +28,27 @@
 
 .posts {
   justify-content: center;
+}
+
+.sidebar {
+  margin-right: 4vw;
+  position: fixed;
+  right: 0;
+  max-height: 75%;
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(165, 216, 186, 0.829);
+  padding: 2.5vh;
+  border-radius: 3px;
+  width: fit-content;
+}
+
+@media screen and (max-width: 800px) {
+  .sidebar {
+    display: none;
+  }
+  .main {
+    justify-content: center;
+    padding: 0px;
+  }
 }
