--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,7 +1,6 @@
 .app {
-  padding: 0vh 4vw 2vh 4vw;
+  justify-items: center;
   color: #114e09;
-  width: 90vw;
   min-height: 90vh;
   display: flex;
   justify-content: center;
@@ -18,5 +17,5 @@
 }
 
 .outlet {
-  padding: 100px 0px;
+  padding: 100px 0px 50px;
 }
