--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,15 +1,21 @@
 .home {
   display: flex;
+  width: 100%;
   justify-content: space-between;
   flex-direction: column;
+  align-items: center;
+}
+
+.main {
+  padding-right: 150px;
 }
 
 .heading {
-  padding-right: 450px;
+  justify-self: baseline;
 }
 
 .userSearch {
-  margin-right: 20px;
+  margin-right: 60px;
   position: fixed;
   right: 0;
   max-height: 75%;
@@ -21,15 +27,19 @@
   min-width: fit-content;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1300px) {
   .userSearch {
     display: none;
   }
   .heading {
+    justify-self: center;
+  }
+  .main {
     padding-right: 0px;
   }
   .posts {
-    width: 100%;
+    width: fit-content;
+    justify-self: center;
   }
 }
 
@@ -42,7 +52,7 @@
   display: flex;
   align-self: center;
   overflow-x: auto;
-  max-height: 10vh;
+  height: 10vh;
 }
 
 @keyframes animation {
@@ -122,7 +132,7 @@
   width: 65vw;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-self: center;
   justify-content: center;
 }
 
@@ -149,11 +159,4 @@
 
 .posts {
   width: fit-content;
-}
-
-@media screen and (max-width: 1300px) {
-  .posts {
-    width: fit-content;
-    justify-self: center;
-  }
 }
